DDW-431 - Newsfeed shadow fixes - fix for scrollbar

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -101,8 +101,16 @@
     &.noUpdateItem {
       padding: 10px 20px 0;
 
+      *::-webkit-scrollbar-track {
+        margin: 3px 0;
+      }
+
       &.hasShadow {
         padding: 0 20px;
+
+        *::-webkit-scrollbar-track {
+          margin: -2px 0 12px;
+        }
       }
     }
 
